@@ -1,3 +1,10 @@
+2024-10-18  Niels Möller  <nisse@lysator.liu.se>
+
+	* mini-gmp.c (mpn_gcd): New function.
+	(mpz_gcd): Use mpn_gcd.
+	* mini-gmp.h: Add declaration of mpn_gcd.
+	* tests/t-gcd.c (test_one): Add testing of mpn_gcd.
+
 2024-03-25 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* tests/t-import.c: Do not print unused value.
